헤더 전체수정 오류있음
오류있지만 일단 편집 일부 완

--- a/main.html
+++ b/main.html
@@ -4,16 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Gaegu&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="css/header.css">
 </head>
 <body>
     <header class="bar">
         <div class="bar_logo">
-            <i class="fa-solid fa-tag"></i>
-            <a href="">공부하자</a>
+            <img src="image/logo.svg" alt="">
+            <div><a href="">공부하자</a></div>
         </div>
         <div class="bar_menu">
             <div>
@@ -23,10 +20,17 @@
             </div>
         </div>
         <div class="bar_link">
-            <i class="fa-brands fa-facebook"></i>
-            <i class="fa-brands fa-instagram"></i>
-            <i class="fa-brands fa-github"></i>
+            <img src="image/instagram.svg" alt="">
+            <img src="image/facebook.svg" alt="">
+            <img src="image/github.svg" alt="">
+            <img src="image/discord.svg" alt="">
         </div>
     </header>
+    <body>
+        
+    </body>
+    <footer>
+
+    </footer>
 </body>
 </html>
