테스트진행해봄
변화테스트를해보았음

--- a/main.html
+++ b/main.html
@@ -3,20 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>네이버</title>
 <link rel="stylesheet" href="css/header.css">
+<style>
+    header{ color: gray;}
+</style>
 </head>
 <body>
     <header class="bar">
         <div class="bar_logo">
             <img src="image/logo.svg" alt="">
-            <div><a href="">공부하자</a></div>
+            <div>암튼 모임</div>
         </div>
         <div class="bar_menu">
             <div>
-                <li><a href="#">홈</a></li>
-                <li><a href="#">포럼</a></li>
-                <li><a href="#">시계</a></li>
+                <a href="main.html">홈</a>
+                <a href="#">포럼</a>
+                <a href="#">시계</a>
             </div>
         </div>
         <div class="bar_link">
@@ -26,6 +29,7 @@
             <img src="image/discord.svg" alt="">
         </div>
     </header>
+    <hr>
     <body>
         
     </body>
