--- a/main.html
+++ b/main.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>네이버</title>
+    <title>암튼 모임</title>
 <link rel="stylesheet" href="css/header.css">
 <style>
     header{ color: gray;}
@@ -18,7 +18,7 @@
         <div class="bar_menu">
             <div>
                 <a href="main.html">홈</a>
-                <a href="#">포럼</a>
+                <a href="individual.html">개인 홈피</a>
                 <a href="#">시계</a>
             </div>
         </div>
@@ -29,7 +29,6 @@
             <img src="image/discord.svg" alt="">
         </div>
     </header>
-    <hr>
     <body>
         
     </body>
