김형진html업데이트

--- a/individual.html
+++ b/individual.html
@@ -6,7 +6,7 @@
     <title>개인 홈피로 가는 곳</title>
 </head>
 <body>
-    <li><a href="#">사림1</a></li>
+    <li><a href="kimhungjin.html">김형진</a></li>
     <li><a href="#">사림2</a></li>
     <li><a href="#">사람3</a></li>
     <li><a href="#">사람4</a></li>
