김규호html업데이트

--- a/individual.html
+++ b/individual.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <li><a href="kimhungjin.html">김형진</a></li>
-    <li><a href="#">사림2</a></li>
+    <li><a href="kimguoho.html">김규호</a></li>
     <li><a href="#">사람3</a></li>
     <li><a href="#">사람4</a></li>
 </body>
