채교준홈페이지업데이트

--- a/individual.html
+++ b/individual.html
@@ -8,7 +8,7 @@
 <body>
     <li><a href="kimhungjin.html">김형진</a></li>
     <li><a href="kimguoho.html">김규호</a></li>
-    <li><a href="#">사람3</a></li>
+    <li><a href="chaegyojun.html">채교준</a></li>
     <li><a href="#">사람4</a></li>
 </body>
 </html>
