--- a/chaegyojun/myself.html
+++ b/chaegyojun/myself.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>김형진홈페이지</title>
+    <title>자기소개</title>
 </head>
 <body>
     
