약간건드려봄

--- a/main.html
+++ b/main.html
@@ -7,6 +7,11 @@
 <link rel="stylesheet" href="css/header.css">
 <style>
     header{ color: gray;}
+    body {
+        background-color: ivory;
+    }
+    @import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&display=swap')
+
 </style>
 </head>
 <body>
@@ -16,21 +21,13 @@
             <div>암튼 모임</div>
         </div>
         <div class="bar_menu">
-            <div>
-                <a href="main.html">홈</a>
-                <a href="individual.html">개인 홈피</a>
-                <a href="#">시계</a>
-            </div>
-        </div>
-        <div class="bar_link">
-            <img src="image/instagram.svg" alt="">
-            <img src="image/facebook.svg" alt="">
-            <img src="image/github.svg" alt="">
-            <img src="image/discord.svg" alt="">
+            <a href="main.html">홈</a>
+            <a href="individual.html">개인 홈피</a>
+            <a href="#">시계</a>
         </div>
     </header>
     <body>
-            
+        <div class="timeTitle">Time</div>
     </body>
     <footer>
 
