메인살짝편집

--- a/main.html
+++ b/main.html
@@ -10,6 +10,7 @@
     body {
         background-color: ivory;
     }
+    
 </style>
 </head>
 <body>
@@ -25,7 +26,7 @@
         </div>
     </header>
     <body>
-        <div class="timeTitle">Time</div>
+        <div class="timeTitle">각자의 홈페이지 만들기</div>
     </body>
     <footer>
 
