--- a/individual.html
+++ b/individual.html
@@ -9,6 +9,6 @@
     <li><a href="kimhungjin.html">김형진</a></li>
     <li><a href="kimguoho.html">김규호</a></li>
     <li><a href="chaegyojun.html">채교준</a></li>
-    <li><a href="#">사람4</a></li>
+    <li><a href="HongJohn.html">홍요한</a></li>
 </body>
 </html>
