--- a/main.html
+++ b/main.html
@@ -10,21 +10,27 @@
     body {
         background-color: ivory;
     }
-    
+    .timeTitle{
+        font-size: 15px;
+    }
+    img{
+        width: 30px;
+        height: 50px;
+    }
 </style>
 </head>
 <body>
     <header class="bar">
         <div class="bar_logo">
             <img src="image/logo.svg" alt="">
-            <div>암튼 모임</div>
+            <h3>암튼 모임</h3>
         </div>
         <div class="bar_menu">
-            <a href="main.html">홈</a>
+            <a href="main.html">홈페이지 존재 이유</a>
             <a href="individual.html">개인 홈피</a>
-            <a href="#">시계</a>
         </div>
     </header>
+    <hr>
     <body>
         <div class="timeTitle">각자의 홈페이지 만들기</div>
     </body>
