--- a/HongJohn.html
+++ b/HongJohn.html
@@ -1,11 +1,44 @@
 <!DOCTYPE html>
-<meta charset="UTF-8">
 <html>
     <head>
-        <title>홍요한의 페이지</title>
+        <meta charset="UTF-8">
+        <link rel="stylesheet" href="css/HongJohn/style.css">
+        <script src="js(javascript)/HongJohn/script.js"></script>
+        <title>홍○○의 페이지</title>
     </head>
     <body>
-
+        <div id="profile">
+            <img src="/image/HongJohn/bonobono.png" width="20%">
+            <div id="text_information">
+                <div id="title">
+                    <h1>안녕하세요~~~~~~~~~</h1>
+                </div>
+                <div id="description">
+                    <ol>
+                        <li>
+                        동해물과 백두산이 마르고 닳도록<br>
+                        하느님이 보우하사 우리나라만세<br>
+                        (후렴)무궁화 삼천리 화려강산 대한사람 대한으로 길이 보전하세<br>
+                        </li>
+                        <li>
+                            남산위에 저 소나무 철갑을 두른듯<br>
+                            바람서리 불변함은 우리기상 일세<br>
+                            (후렴)무궁화 삼천리 화려강산 대한사람 대한으로 길이보전하세<br>
+                        </li>
+                        <li>
+                            가을하늘 공활한데 높고 구름없이<br>
+                            밝은달은 우리가슴 일편단심일세<br>
+                            (후렴)무궁화 삼천리 화려강산 대한사람 대한으로 길이보전하세<br>
+                        </li>
+                        <li>
+                            이 기상과 이 맘으로 충성을 다하여<br>
+                            괴로우나 즐거우나 나라사랑하세<br>
+                            (후렴)무궁화 삼천리 화려강산 대한사람 대한으로 길이보전하세<br>
+                        </li>
+                    </ol>
+                </div>
+            </div>
+        </div>
     </body>
     </html>
 </html>
